--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
+     <link rel="icon" type="image/svg+xml" href="./public/logo-bingo.svg" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Bingo Multijugador - Cliente</title>
+    <title>Bingo Emaus</title>
   </head>
   <body>
     <div id="root"></div>
